--- a/app/views/current_bps/new.html.erb
+++ b/app/views/current_bps/new.html.erb
@@ -1,13 +1,6 @@
 <div id='main'>
 	
-	<div id='strip1'>
-		<% if !user_signed_in? %>
-			<div id='strip1_content'>
-				<h1>The best blood pressure treatment</h1>
-				
-			</div>
-		<% end %>
-	</div>
+	<%= render 'info/generic_title' %>
 	
 	<div id='strip2'>
 		<div id='strip2_content'>
