--- a/app/views/info/info/what_am_i_measuring.html.erb
+++ b/app/views/info/info/what_am_i_measuring.html.erb
@@ -3,7 +3,13 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>What am I measuring?</h2>
+			<div id='welcome'>
+				<h2>What am I measuring?</h2>
+			</div>
+			
+			<%= render 'info/questions' %>
+			
+			<div id='text'>
 			<p>When you measure your blood pressure you will get two numbers. The bigger number is called your systolic blood pressure and the smaller number is called your diastolic blood pressure. The measurements are made in units called millimetres of mercury (or mmHg). Both numbers are important.</p>
 			
 			<h3>Systolic blood pressure</h3>
@@ -11,6 +17,7 @@
 			
 			<h3>Diastolic blood pressure</h3>
 			<p>The smaller number (diastolic) is a measure of the pressure in your arteries at the lowest point of your pulse. This is when your heart is relaxing between heart beats.</p>
+			</div>
 		</div>
 	
 	</div>
