--- a/app/views/info/info/what_are_the_best_medication_options_for_me.html.erb
+++ b/app/views/info/info/what_are_the_best_medication_options_for_me.html.erb
@@ -1,21 +1,16 @@
 <div id='main'>
-	<div id='strip1'>
-		<div id='strip1_content'>
-			<h1>Your choice of blood pressure treatment</h1>
-			<p id='first'>FREE advice from UK GPs.</p>
-			<p id='second'>Online. Anytime.</p>
-			<div class='clear_float'></div>
-		</div>
-	</div>
+	<%= render 'info/treating_bp_title' %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
+			<div id='welcome'>
 			<h2>What are the best medication options for me?</h2>
 			<p>In the same way that there is no magic ‘normal’ blood pressure range for everyone, it probably won’t surprise you to learn that there isn’t a magic medication that is also the best for everyone. If you suffer from other medical conditions you will find that some medications are more or less effective. Doctors have also found that your age and your ethnic background influence how effective some medications are.</p>
 			<p>By using HomeBloodPressure.co.uk you will get advice about the best medication options for you based on your own medical details.</p>
 			
 			<h3>What medications are available?</h3>
 			<p>There are a huge number of different medications available to treat high blood pressure. They are split into groups based on how they work inside your body. The most common groups are listed below.</p>
+			</div>
 		</div>
 		
 		<div id='links'>
