--- a/app/views/info/info/what_do_the_numbers_mean.html.erb
+++ b/app/views/info/info/what_do_the_numbers_mean.html.erb
@@ -3,9 +3,16 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>What do the numbers mean?</h2>
+			<div id='welcome'>
+				<h2>What do the numbers mean?</h2>
+			</div>
+			
+			<%= render 'info/questions' %>
+			
+			<div id='text'>
 			<p>Your blood pressure is a measure of the pressure inside your arteries. These are the blood vessels that carry the blood away from your heart to the rest of your body. Doctors have discovered that if you have high blood pressure you are more likely to suffer from certain illnesses. These illnesses are caused by damaged blood vessels. These include heart attacks, strokes, bad circulation, kidney damage and some serious eye conditions.</p>
 			<p>The good news is that doctors have also found that by lowering your blood pressure your risk of having any of these illnesses is improved. This is why it is so important to know if your blood pressure is too high. By using HomeBloodPressure.co.uk you will get expert advice on whether you have high blood pressure. You will also get help to choose the best treatment.</p>
+			</div>
 		</div>
 	
 	</div>
