--- a/app/views/info/info/what_is_blood_pressure.html.erb
+++ b/app/views/info/info/what_is_blood_pressure.html.erb
@@ -5,6 +5,7 @@
 	<% if !user_signed_in? %>
 	<div id='strip2'>
 		<div id='strip2_content'>
+			<%= render 'info/promo' %>
 			<%= render 'info/is_my_bp_too_high' %>
 		</div>
 	</div>
@@ -12,7 +13,9 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>What is blood pressure?</h2>
+			<div id='welcome'>
+				<h2>What is blood pressure?</h2>
+			</div>
 		</div>
 		
 		<div id='links'>
