--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,13 +1,10 @@
 <div id='main'>
 	
-	<div id='strip1'>
-		<div id='strip1_content'>
-			<h1>The best blood pressure treatment</h1>
-		</div>
-	</div>
+	<%= render 'info/generic_title' %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
+			<div id='text'>
 			<h2>About us</h2>
 			
 			<p class='name'>Dr. Colin Coulthard</p>
@@ -29,6 +26,7 @@
 			<p class='indent'>So, why do people have to come down to our consulting rooms for this?</p>
 			<p class='indent'>Why can't most of this be automated to allow patients to get advice and prescriptions for their high blood pressure wherever and whenever they want?</p>
 			<p>And so HomeBloodPressure.co.uk was born. Coupled with your home blood pressure monitor, we will provide all the advice and prescriptions you need to control your blood pressure.</p>
+			</div>
 		</div>
 	</div>
 
