--- a/app/views/static_pages/tac.html.erb
+++ b/app/views/static_pages/tac.html.erb
@@ -6,6 +6,7 @@
 	
 	<div id='strip3'>
 	<div id='strip3_content'>
+	<div id='text'>
 	<h2>Terms and Conditions</h2>
 	<p>By using this service you are confirming that you understand and agree to be legally bound by these Terms and Conditions.</p>
 	<p>IF YOU DO NOT AGREE TO THESE TERMS AND CONDITIONS YOU SHOULD NOT USE THIS SERVICE.</p>
@@ -132,6 +133,7 @@
 	<h2>18. Governing law</h2>
 		<p>These Terms and Conditions are subject to the laws of England and each of us hereby submits to the non-exclusive jurisdiction of the English courts.</p>
 		<p>We reserve the right to change these terms and conditions at any time. The new version will be posted on this website and will take effect immediately upon posting. If you use this website after the new terms and conditions have come into effect, you will be indicating your agreement to be bound by the new terms and conditions.</p>
+	</div>
 	</div>
 	</div>
 </div>
