--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -4,6 +4,8 @@
       
       #strip3_content {
         
+        #text {
+        
         .name {
           float: left;
           font-size:1.2em;
@@ -30,6 +32,7 @@
         
         .indent {
           margin-left: 6%;
+        }
         }
       }
     }
