--- a/app/views/info/_what_is_bp_title.html.erb
+++ b/app/views/info/_what_is_bp_title.html.erb
@@ -1,6 +1,12 @@
 <div id='strip1'>
 	<div id='strip1_content'>
 		<h1>Find out more about your blood pressure</h1>
-		<p>By using this site you’ll get clear information about your blood pressure. You’ll get up to date personalised advice from UK GPs. You’ll be able to use this information whenever you want, without the hassle of having to get an appointment at your doctors.</p>
+		
+		<% if !user_signed_in? %>
+		<p>Sign up and you will get clear information about your blood pressure</p>
+		<p>Sign up and you will get up to date personalised advice from UK GPs</p>
+		<p>Sign up and you won't have the hassle of trying to get an appointment at your doctor's</p>
+		<%= link_to 'Find out more...', static_pages_features_path %>
+		<% end %>
 	</div>
 </div>
