--- a/app/views/info/info/calcium_channel_blockers.html.erb
+++ b/app/views/info/info/calcium_channel_blockers.html.erb
@@ -1,21 +1,21 @@
 <div id='main'>
-	<div id='strip1'>
-		<div id='strip1_content'>
-			<h1>Your choice of blood pressure treatment</h1>
-			<p id='first'>FREE advice from UK GPs.</p>
-			<p id='second'>Online. Anytime.</p>
-			<div class='clear_float'></div>
-		</div>
-	</div>
+	<%= render 'info/treating_bp_title' %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Calcium channel blockers</h2>
+			<div id='welcome'>
+				<h2>Calcium channel blockers</h2>
+			</div>
+			
+			<%= render 'info/questions' %>
+			
+			<div id='text'>
 			<h3>Benefits</h3>
 			<p>If you’re of African or Caribbean origin, or over 55 years old of any ethnicity, then calcium channel blockers will probably be the first choice medication for you. This is because they are one of the most effective types of medication at preventing heart attacks and strokes in people with high blood pressure.</p>
 			
 			<h3>Side effects</h3>
 			<p>If you are using them at higher doses then sometimes they can cause swelling around the ankles. If you reduce the dose then this usually gets better.</p>
+			</div>
 		</div>
 	
 	</div>
