--- a/app/views/info/info/what_is_the_normal_range_for_me.html.erb
+++ b/app/views/info/info/what_is_the_normal_range_for_me.html.erb
@@ -3,7 +3,13 @@
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>What is the normal blood pressure range for me?</h2>
+			<div id='welcome'>
+				<h2>What is the normal blood pressure range for me?</h2>
+			</div>
+			
+			<%= render 'info/questions' %>
+			
+			<div id='text'>
 			<p>Sadly there isn’t one magic ‘normal’ range for blood pressure. For a start, what is normal depends on where you are when the readings are taken. Everything written below is based upon readings taken at home using your own blood pressure monitor (there are different normal ranges for readings taken in clinics or at hospital).</p>
 			<p>Doctors have also decided that what might be a healthy blood pressure for one person, might not be good for another person. This depends upon what other illnesses you may have. Some illnesses can make the bad effects of high blood pressure even worse. So, if you have these illnesses, we recommend keeping your blood pressure lower.</p>
 			
@@ -15,6 +21,7 @@
 			
 			<h3>I’m completely fit and well. What is the normal range for me?</h3>
 			<p>That’s an easier question to answer! If you have no medical conditions then the upper limit of a healthy blood pressure is considered to be 150/95 mmHg.  If you have already been diagnosed with high blood pressure then your target blood pressure will be lower.</p>
+			</div>
 		</div>
 	
 	</div>
