--- a/app/views/info/info/why_do_i_need_to_take_more_than_one_medication.html.erb
+++ b/app/views/info/info/why_do_i_need_to_take_more_than_one_medication.html.erb
@@ -1,20 +1,20 @@
 <div id='main'>
-	<div id='strip1'>
-		<div id='strip1_content'>
-			<h1>Your choice of blood pressure treatment</h1>
-			<p id='first'>FREE advice from UK GPs.</p>
-			<p id='second'>Online. Anytime.</p>
-			<div class='clear_float'></div>
-		</div>
-	</div>
+	<%= render 'info/treating_bp_title' %>
 	
 	<div id='strip3'>
 		<div id='strip3_content'>
-			<h2>Why do I need to take more than one medication?</h2>
+			<div id='welcome'>
+				<h2>Why do I need to take more than one medication?</h2>
+			</div>
+			
+			<%= render 'info/questions' %>
+			
+			<div id='text'>
 			<p>Often you will find that a single medication is not enough to bring your blood pressure down on it’s own. This means that you will need to take more than one medication. In many cases you will also get a bonus effect in that the combination of medications will reduce your blood pressure more than just the cumulative effect of each individual medication. This is called synergy.</p>
 			
 			<h3>Why do I need to take a high dose of one medication and a low dose of another?</h3>
 			<p>With some medications a low dose is enough to get all the benefits. With others, the higher the dose that you take, the greater the benefits.</p>
+			</div>
 		</div>
 	
 	</div>
