--- a/app/views/info/_measuring_bp_title.html.erb
+++ b/app/views/info/_measuring_bp_title.html.erb
@@ -3,9 +3,9 @@
 		<h1>How you can measure your blood pressure</h1>
 		
 		<% if !user_signed_in? %>
-		<p>Sign up so that you'll get clear instructions on how and when to measure your blood pressure</p>
-		<p>Sign up so you can keep a running record of your blood pressure</p>
-		<p>Sign up so that we can do the hard work for you and work out your average blood pressure</p>
+		<p>Sign up so that you'll get clear instructions on how and when to measure your blood pressure...</p>
+		<p>Then you'll be able to keep a running record of your blood pressure...</p>
+		<p>And we can do the hard work for you and work out your average blood pressure.</p>
 		<%= link_to 'Find out more...', static_pages_features_path %>
 		<% end %>
 	</div>
