further strip1 text changes

--- a/app/views/info/_what_is_bp_title.html.erb
+++ b/app/views/info/_what_is_bp_title.html.erb
@@ -3,9 +3,9 @@
 		<h1>Find out more about your blood pressure</h1>
 		
 		<% if !user_signed_in? %>
-		<p>Sign up and you will get clear information about your blood pressure</p>
-		<p>Sign up and you will get up to date personalised advice from UK GPs</p>
-		<p>Sign up and you won't have the hassle of trying to get an appointment at your doctor's</p>
+		<p>Sign up and you will get clear information about your blood pressure...</p>
+		<p>You can get up to date personalised advice from UK GPs...</p>
+		<p>And you won't have the hassle of trying to get an appointment at your doctor's.</p>
 		<%= link_to 'Find out more...', static_pages_features_path %>
 		<% end %>
 	</div>
