--- a/app/views/info/_treating_bp_title.html.erb
+++ b/app/views/info/_treating_bp_title.html.erb
@@ -4,9 +4,9 @@
 		<h1>Your choice of blood pressure treatment</h1>
 		
 		<% if !user_signed_in? %>
-		<p>Sign up and you will get FREE advice about treating your blood pressure from UK GPs</p>
-		<p>Sign up and you will be the one in charge of your own treatment</p>
-		<p>Sign up and you can choose to have your prescription delivered to your door</p>
+		<p>Sign up and you will get FREE advice about treating your blood pressure from UK GPs...</p>
+		<p>Then you will be the one in charge of your own treatment...</p>
+		<p>And you can choose to have your prescription delivered to your door.</p>
 		<%= link_to 'Find out more...', static_pages_features_path %>
 		<% end %>
 	</div>
