info routing simplified

--- a/app/views/account/home.html.erb
+++ b/app/views/account/home.html.erb
@@ -29,7 +29,7 @@
 			<% else %>
 			<p>...Next you need to sign up to our free service. Then you’ll be able to use our simple site to measure your blood pressure over the next four days. We’ll do all the hard work for you. After four days, you’ll have the most accurate home blood pressure reading possible.</p>
 			<p id='feature_2'>Sign up below to start measuring your blood pressure at home.</p>
-			<p>Why do I need to measure my blood pressure over four days? <%= link_to 'Find out here...', info_when_should_i_measure_my_blood_pressure_path %></p>
+			<p>Why do I need to measure my blood pressure over four days? <%= link_to 'Find out here...', info_path('when-should-i-measure-my-blood-pressure') %></p>
 			<% end %>
 			</div>
 
