--- a/app/views/info/measuring-blood-pressure.html.erb
+++ b/app/views/info/measuring-blood-pressure.html.erb
@@ -19,17 +19,17 @@
 		</div>
 		
 		<div id='links'>
-			<%= link_to(info_how_do_i_measure_my_blood_pressure_path, :class => 'info_link1') do %>
+			<%= link_to(info_path('how-do-i-measure-my-blood-pressure'), :class => 'info_link1') do %>
 				<%= image_tag("woman_taking_bp_small.jpg") %>
 				<span class='link_title'>How do I measure my blood pressure?</span>
 				<span class='link_text'>One of the best ways is to use a home blood pressure machine… <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_when_should_i_measure_my_blood_pressure_path, :class => 'info_link2') do %>
+			<%= link_to(info_path('when-should-i-measure-my-blood-pressure'), :class => 'info_link2') do %>
 				<%= image_tag("diary_small.jpg") %>
 				<span class='link_title'>When should I measure my blood pressure?</span>
 				<span class='link_text'>You should measure your blood pressure each morning and evening… <span class='more'>find out more.</span></span>
 			<% end %>
-			<%= link_to(info_how_do_i_choose_a_blood_pressure_machine_path, :class => 'info_link1') do %>
+			<%= link_to(info_path('how-do-i-choose-a-blood-pressure-machine'), :class => 'info_link1') do %>
 				<%= image_tag("blood_pressure_machine_small.jpg") %>
 				<span class='link_title'>How do I choose a blood pressure machine?</span>
 				<span class='link_text'>You don’t need to spend much money to get a blood pressure machine… <span class='more'>find out more.</span></span>
