--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
   ga('create', 'UA-45096969-1', 'homebloodpressure.co.uk');
+  ga('require', 'linkid', 'linkid.js');
   ga('send', 'pageview');
 
   </script>
@@ -110,17 +111,6 @@
 	</div>
 
 </div>
-
-<!-- Google event tracking -->
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-45096969-1");
-pageTracker._trackPageview();
-} catch(err) {}</script>
 
 </body>
 </html>
