--- a/app/views/devise/registrations/_new.html.erb
+++ b/app/views/devise/registrations/_new.html.erb
@@ -31,7 +31,7 @@
 	<div id='tac_error_msg'>
 	</div>
   	<div id='sign_up_button'>
-  		<button type='submit' class='button3' onClick="ga('send', 'event', 'Button', 'Sign-up');">
+  		<button type='submit' class='button3' onClick="ga('send', 'event', 'Button', 'Sign-up');mixpanel.track('Sign-up');">
   			<span>Sign up</span>
   			<br />
   			Control your blood pressure at home
