--- a/app/views/info/_promo.html.erb
+++ b/app/views/info/_promo.html.erb
@@ -19,6 +19,6 @@
 			</tr>
 		</table>
 		
-		<%= link_to 'Find out more...', static_pages_features_path %>
+		<%= link_to 'Take a tour...', static_pages_features_path %>
 	</div>
 </div>
