--- a/app/assets/stylesheets/info.css.scss
+++ b/app/assets/stylesheets/info.css.scss
@@ -98,6 +98,7 @@
         
             #submit {
               padding: 0px 0px 0px 10px;
+              height: 50px;
             }
           
             #error_explanation {
